# codeworld

./: .eslintrc.yml  .ghci  .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  =0.0.2  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  README.md  RequirementChecker.md  ServerSetup.md  SummerOfHaskell.md  Users.md  base.sh  build-docker.sh  build.sh  cabal.project  default.nix  format.sh  ghci.sh  haskell-parser.pegjs  inc-build-test.sh  install.sh  makelinks.sh  run.sh  stack.yaml  test.sh
codeworld-account/: Setup.hs  codeworld-account.cabal  stack.yaml
codeworld-account/app/: Main.hs
codeworld-account/lib/CodeWorld/: Account.hs
codeworld-account/src/CodeWorld/: Account.hs
codeworld-api/: Setup.hs  codeworld-api.cabal  stack.yaml
codeworld-api/data/: README.md
codeworld-api/jsbits/: sim_fp.js
codeworld-api/src/: CodeWorld.hs  test-prediction.hs
codeworld-api/src/CodeWorld/: App.hs  App2.hs  App3.hs  CanvasM.hs  CollaborationUI.hs  Color.hs  DrawState.hs  Driver.hs  EntryPoints.hs  Event.hs  Image.hs  Message.hs  Parameter.hs  Picture.hs  Prediction.hs  Reflex.hs  Sketches.hs
codeworld-api/src/Reflex/: SimpleHost.hs
codeworld-api/src/Util/: EmbedAsUrl.hs
codeworld-api/test/: Driver.hs  Main.hs  TestDriver.hs
codeworld-api/tests/: prediction.hs
codeworld-auth/: Setup.hs  codeworld-auth.cabal  stack.yaml
codeworld-auth/app/: Main.hs
codeworld-auth/lib/CodeWorld/: Auth.hs
codeworld-auth/src/CodeWorld/: Auth.hs
codeworld-autocomplete/: .gitignore  Main.hs  Setup.hs  codeworld-autocomplete.cabal  run.sh
codeworld-available-pkgs/: codeworld-available-pkgs.cabal
codeworld-available-pkgs/src/: Main.hs
codeworld-base/: .gitignore  CodeWorld.hs  Foreign.hs  HaskellPrelude.hs  LICENSE  Numeric.hs  Prelude.hs  Setup.hs  codeworld-base.cabal  stack.yaml
codeworld-base/Control/: Applicative.hs  Concurrent.hs  Monad.hs
codeworld-base/Control/Concurrent/: Chan.hs  QSemN.hs
codeworld-base/Control/Monad/: Fix.hs  Zip.hs
codeworld-base/Data/: Bool.hs  Coerce.hs  Complex.hs  Data.hs  Either.hs  Fixed.hs  Foldable.hs  Function.hs  IORef.hs  List.hs  Maybe.hs  Proxy.hs  Ratio.hs  STRef.hs  String.hs  Typeable.hs  Unique.hs  Word.hs
codeworld-base/Data/Type/: Bool.hs
codeworld-base/Foreign/: Safe.hs
codeworld-base/Foreign/Marshal/: Utils.hs
codeworld-base/GHC/: Arr.hs  Base.hs  Char.hs  Desugar.hs  Enum.hs  Err.hs  Exception.hs  Fingerprint.hs  Foreign.hs  IORef.hs  Int.hs  Num.hs  Real.hs  ST.hs  Show.hs  Stable.hs  Stack.hs  Word.hs
codeworld-base/GHC/Conc/: IO.hs  Sync.hs
codeworld-base/GHC/Float/: ConversionUtils.hs
codeworld-base/GHC/IO/: BufferedIO.hs  Exception.hs  FD.hs
codeworld-base/Internal/: CodeWorld.hs  Color.hs  DeepEq.hs  Event.hs  Num.hs  Picture.hs  Prelude.hs  Text.hs
codeworld-base/System/: CPUTime.hs  Info.hs  Timeout.hs
codeworld-base/System/Mem/: StableName.hs  Weak.hs
codeworld-base/Text/: Printf.hs  Read.hs
codeworld-base/Text/ParserCombinators/: ReadP.hs
codeworld-base/Text/Read/: Lex.hs
codeworld-base/Text/Show/: Functions.hs
codeworld-base/Unsafe/: Coerce.hs
codeworld-base/jsbits/: deep_eq.js
codeworld-base/src/: CodeWorld.hs  Core.hs  Foreign.hs  HaskellPrelude.hs  Image.hs  Numeric.hs  Parameter.hs  Prelude.hs  Sketches.hs
codeworld-base/src/Control/: Applicative.hs  Arrow.hs  Category.hs  Concurrent.hs  Exception.hs  Monad.hs
codeworld-base/src/Data/: Bits.hs  Bool.hs  Char.hs  Coerce.hs  Complex.hs  Data.hs  Dynamic.hs  Either.hs  Eq.hs  Fixed.hs  Foldable.hs  Function.hs  Functor.hs  IORef.hs  Int.hs  Ix.hs  List.hs  Maybe.hs  Monoid.hs  Ord.hs  Proxy.hs  Ratio.hs  STRef.hs  String.hs  Traversable.hs  Tuple.hs  Typeable.hs  Unique.hs  Version.hs  Word.hs
codeworld-base/src/Debug/: Trace.hs
codeworld-base/src/Extras/: Colors.hs  Cw.hs  Op.hs  Turtle.hs  Util.hs  Widget.hs
codeworld-base/src/Foreign/: C.hs  Concurrent.hs  ForeignPtr.hs  Marshal.hs  Ptr.hs  Safe.hs  StablePtr.hs  Storable.hs
codeworld-base/src/GHC/: Arr.hs  Base.hs  Char.hs  Conc.hs  ConsoleHandler.hs  Constants.hs  Desugar.hs  Enum.hs  Environment.hs  Err.hs  Event.hs  Exception.hs  Exts.hs  Fingerprint.hs  Float.hs  Foreign.hs  ForeignPtr.hs  IO.hs  (+26 more)
codeworld-compiler/: ChangeLog.md  Setup.hs  codeworld-compiler.cabal  stack.yaml
codeworld-compiler/exec/: GenBase.hs  Main.hs
codeworld-compiler/src/: Compile.hs  ErrorSanitizer.hs  Main.hs  ParseCode.hs
codeworld-compiler/test/: Main.hs
codeworld-error-sanitizer/: Setup.hs  codeworld-error-sanitizer.cabal  stack.yaml
codeworld-error-sanitizer/src/: ErrorSanitizer.hs  RegexShim.hs
codeworld-error-sanitizer/test/: Main.hs
codeworld-game-api/: Setup.hs  codeworld-game-api.cabal  stack.yaml
codeworld-game-server/: codeworld-game-server.cabal  stack.yaml
codeworld-game-server/src/: Bot.hs  Main.hs  Stresstest.hs
codeworld-prediction/: codeworld-prediction.cabal  stack.yaml
codeworld-prediction/tests/: Common.hs  prediction-paper.hs  prediction.hs
codeworld-server/: .ghci  .gitignore  Setup.hs  codeworld-server.cabal  run.sh  stack.yaml
codeworld-server/log/: README
codeworld-server/projects/: .gitignore  README
codeworld-server/src/: AndroidExport.hs  Build.hs  Collaboration.hs  CollaborationUtil.hs  Collaboration_.hs  Comment.hs  CommentFolder.hs  CommentUtil.hs  Comment_.hs  DataUtil.hs  ErrorSanitizer.hs  Folder.hs  Folder_.hs  Main.hs  Migration.hs  Model.hs  Paths.hs  Regex.hs  SnapUtil.hs  Util.hs
codeworld-server/user/: .gitignore  LinkBase.hs  LinkMain.hs  README  REBUILD  build.sh  clean.sh  rebuild.sh
codeworld-server/web/: .gitignore  codemirror-compressed.js  codeworld-cm.css  codeworld-mode.js  codeworld.css  codeworld.js  deep_eq.js  doc  doc.css  doc.html  doc.js  env.html  index.html  license.md  run.html
funblocks-base/: Setup.hs  funblocks-base.cabal
funblocks-base/src/: Main.hs
funblocks-client/: Setup.hs  funblocks-client.cabal  stack.yaml
funblocks-client/src/: Main.hs
funblocks-server/: Setup.hs  funblocks-server.cabal
funblocks-server/src/: Funblocks.hs  Model.hs  Util.hs
(+532 files in other folders)
