name:                                       codeworld-account
version:                                    0.1
synopsis:                                   SQLite3-based account management for CodeWorld
homepage:                                   https://github.com/google/codeworld#readme
license:                                    Apache
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  (c) 2018, The CodeWorld Authors
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/google/codeworld.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W
                                            -Wall
--                                            -Werror=incomplete-patterns
--                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , bcrypt
                                          , bytestring
                                          , directory
                                          , hashable
                                          , sqlite-simple
                                          , text
                                          , transformers
  exposed-modules:                          CodeWorld.Account
                                          , CodeWorld.Account.Actions
                                          , CodeWorld.Account.Hashing
                                          , CodeWorld.Account.Types

executable codeworld-account
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
--                                            -Werror=incomplete-patterns
--                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , bytestring
                                          , cassava
                                          , codeworld-account
                                          , optparse-applicative
                                          , random
