name:                                       codeworld-account
version:                                    0.1
synopsis:                                   SQLite3-based account management for CodeWorld
homepage:                                   https://github.com/google/codeworld#readme
license:                                    Apache
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  (c) 2020, The CodeWorld Authors
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10

source-repository head
  type:                                     git
  location:                                 https://github.com/google/codeworld.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           src
  ghc-options:                              -W
                                            -Wall
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , bcrypt >= 0.0.11
                                          , bytestring
                                          , directory
                                          , hashable
                                          , sqlite-simple
                                          , text
                                          , transformers
  exposed-modules:                          CodeWorld.Account
                                          , CodeWorld.Account.Actions
                                          , CodeWorld.Account.Hashing
                                          , CodeWorld.Account.Types
