name:                                       codeworld-auth
version:                                    0.1
synopsis:                                   Google and local authentication for CodeWorld
homepage:                                   https://github.com/google/codeworld#readme
license:                                    Apache
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  (c) 2020, The CodeWorld Authors
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10

source-repository head
  type:                                     git
  location:                                 https://github.com/google/codeworld.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           src
  ghc-options:                              -W
                                            -Wall
                                            -fwarn-unused-imports
  build-depends:                            aeson < 2.0.0
                                          , base >= 4.7 && < 5
                                          , base64-bytestring
                                          , bytestring
                                          , codeworld-account
                                          , containers
                                          , cryptonite
                                          , directory
                                          , filepath
                                          , http-conduit
                                          , jwt == 0.10.1
                                          , snap-core
                                          , split
                                          , text
                                          , time
                                          , transformers
                                          , unordered-containers
  exposed-modules:                          CodeWorld.Auth
                                          , CodeWorld.Auth.GoogleAuth
                                          , CodeWorld.Auth.Http
                                          , CodeWorld.Auth.LocalAuth
                                          , CodeWorld.Auth.Secret
                                          , CodeWorld.Auth.Time
                                          , CodeWorld.Auth.Token
                                          , CodeWorld.Auth.Types
                                          , CodeWorld.Auth.Util

executable codeworld-auth
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , bytestring
                                          , cassava
                                          , codeworld-account
                                          , codeworld-auth
                                          , optparse-applicative
                                          , random
