name:                codeworld-autocomplete
version:             0.1.0.0
synopsis:            Builder for autocomplete files use in CodeWorld
license:             Apache-2.0
license-file:        LICENSE
author:              Chris Smith
maintainer:          cdsmith@google.com
build-type:          Simple
cabal-version:       >=1.10

executable codeworld-autocomplete
  main-is:             Main.hs
  build-depends:       base < 5, regex-tdfa
  default-language:    Haskell2010