Cabal-version:       2.2

Name:                codeworld-available-pkgs
Version:             0.1.0.0
License:             Apache-2.0
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Chris Smith <cdsmith@gmail.com>
Copyright:           (c) 2019, The CodeWorld Authors
Bug-reports:         https://github.com/google/codeworld/issues

Library
  Build-depends:
    Decimal,
    Earley,
    HUnit,
    ListLike,
    MemoTrie,
    MonadRandom,
    Only,
    QuickCheck,
    StateVar,
    Yampa,
    ad,
    adjunctions,
    -- accelerate, (does not build with GHCJS)
    aeson,
    -- alga, (containers dependency is too old)
    apportionment,
    array,
    assoc,
    async,
    attoparsec,
    auto,
    backprop,
    base,
    base-compat,
    base-orphans,
    base64-bytestring,
    basement,
    bifunctors,
    bimap,
    binary,
    binary-orphans,
    blaze-builder,
    blaze-html,
    blaze-markup,
    -- board-games, (depends on network)
    bool8,
    bytes,
    bytestring,
    call-stack,
    capability,
    case-insensitive,
    cereal,
    cereal-text,
    charset,
    checksum,
    clock,
    colour,
    combinatorial,
    comonad,
    comonad-transformers,
    concur-core,
    concurrency,
    concurrent-output,
    conduit,
    constraints,
    constraints-extras,
    containers,
    contravariant,
    cryptonite,
    data-accessor,
    data-accessor-transformers,
    data-default,
    data-default-class,
    data-default-instances-containers,
    data-default-instances-dlist,
    data-default-instances-old-locale,
    data-reify,
    deepseq,
    dejafu,
    dense-linear-algebra,
    dependent-map,
    dependent-sum,
    digestive-functors,
    distributive,
    dlist,
    dsp,
    dunai,
    either,
    enummapset,
    enumset,
    erf,
    event-list,
    exception-transformers,
    exceptions,
    explicit-exception,
    extensible-effects,
    extra,
    fail,
    fclabels,
    fgl,
    fingertree,
    finite-typelits,
    first-class-families,
    fixed-length,
    fixed-list,
    flow,
    foldl,
    fmlist,
    -- formattable, (time dependency is too old)
    -- foundation, (doesn't build for unclear reasons related to ghc-prim)
    free,
    fused-effects,
    generic-deriving,
    generic-lens,
    generics-sop,
    ghc-prim,
    ghcjs-base,
    ghcjs-dom,
    ghcjs-prim,
    half,
    -- hamilton, (depends on hmatrix, which uses native libs)
    hashable,
    hashtables,
    haskell-lexer,
    haskell-src-exts,
    haskell-src-meta,
    hedgehog,
    hspec,
    hspec-core,
    hspec-expectations,
    html,
    indexed-list-literals,
    indexed-profunctors,
    integer-gmp,
    integer-logarithms,
    interpolation,
    invariant,
    jsaddle,
    kan-extensions,
    keycode,
    latex,
    leancheck,
    lens,
    lifted-async,
    lifted-base,
    linear,
    loop,
    markov-chain,
    massiv,
    math-functions,
    matrix,
    megaparsec,
    memory,
    mmorph,
    microlens,
    microlens-mtl,
    -- monad-bayes, (hackage snapshot is too old to contain this)
    monad-control,
    monad-loops,
    monad-unlift,
    mono-traversable,
    monoid-transformer,
    monoidal-containers,
    mtl,
    mtl-compat,
    mutable-containers,
    mwc-probability,
    mwc-random,
    nats,
    natural-transformation,
    netwire,
    network-uri,
    newtype,
    newtype-generics,
    non-empty,
    non-negative,
    numeric-prelude,
    old-locale,
    optics,
    optics-core,
    optics-extra,
    optparse-applicative,
    parallel,
    parsec,
    parser-combinators,
    parsers,
    patch,
    pipes,
    polysemy,
    pqueue,
    prelude-compat,
    pretty,
    pretty-simple,
    pretty-show,
    prettyprinter,
    prim-uniq,
    primitive,
    probability,
    profunctors,
    protolude,
    psqueues,
    quickcheck-io,
    random,
    random-shuffle,
    reactive-banana,
    reducers,
    ref-tf,
    reflection,
    reflex,
    reflex-dom,
    reflex-dom-core,
    relude,
    resourcet,
    rio,
    safe,
    safe-exceptions,
    scheduler,
    scientific,
    semialign,
    semigroupoids,
    semigroups,
    set-cover,
    simple-affine-space,
    -- singletons, (build error related to Int/Integer/Uniq)
    sop-core,
    split,
    splitmix,
    statistics,
    stm,
    storable-complex,
    storable-record,
    streaming,
    syb,
    tagged,
    tasty,
    tasty-expected-failure,
    tasty-hedgehog,
    tasty-hunit,
    template-haskell,
    text,
    tf-random,
    tfp,
    these,
    time,
    time-compat,
    transformers,
    transformers-base,
    transformers-compat,
    trifecta,
    type-equality,
    typelits-witnesses,
    unagi-chan,
    unbounded-delays,
    unexceptionalio,
    unicode,
    unique,
    unliftio,
    unliftio-core,
    unordered-containers,
    utf8-string,
    utility-ht,
    uuid-types,
    vault,
    vector,
    vector-algorithms,
    vector-binary-instances,
    vector-builder,
    vinyl,
    void,
    witherable,
    wl-pprint-annotated,
    zenc

  Default-language:    Haskell2010
