Cabal-version:       2.2

Name:                codeworld-available-pkgs
Version:             0.1.0.0
License:             Apache-2.0
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Chris Smith <cdsmith@gmail.com>
Copyright:           (c) 2020, The CodeWorld Authors
Bug-reports:         https://github.com/google/codeworld/issues

Library
  Build-depends:
    Boolean,
    Decimal,
    Earley,
    HUnit,
    ListLike,
    MemoTrie,
    MonadRandom,
    NumInstances,
    Only,
    QuickCheck,
    StateVar,
    Yampa,
    active,
    ad,
    adjunctions,
    -- accelerate, (does not build with GHCJS)
    aeson,
    algebraic-graphs,
    apportionment,
    array,
    assoc,
    async,
    attoparsec,
    attoparsec-iso8601,
    auto,
    -- axiom, (depends on transient, which fails to build)
    backprop,
    base,
    base-compat,
    base-orphans,
    base64-bytestring,
    basement,
    bifunctors,
    bimap,
    binary,
    binary-orphans,
    blaze-builder,
    blaze-html,
    blaze-markup,
    -- board-games, (depends on network)
    bool8,
    bytes,
    bytestring,
    call-stack,
    capability,
    case-insensitive,
    cereal,
    cereal-text,
    charset,
    checksum,
    circle-packing,
    clock,
    colour,
    combinatorial,
    comonad,
    comonad-transformers,
    concur-core,
    concurrency,
    concurrent-output,
    conduit,
    constraints,
    constraints-extras,
    containers,
    contravariant,
    cookie,
    cryptonite,
    cubicbezier,
    data-accessor,
    data-accessor-transformers,
    data-default,
    data-default-class,
    data-default-instances-containers,
    data-default-instances-dlist,
    data-default-instances-old-locale,
    data-reify,
    dec,
    deepseq,
    dejafu,
    dense-linear-algebra,
    dependent-map,
    dependent-sum,
    diagrams,
    diagrams-contrib,
    diagrams-core,
    diagrams-lib,
    diagrams-solve,
    diagrams-svg,
    digestive-functors,
    distributive,
    dlist,
    dsp,
    dual-tree,
    dunai,
    either,
    enclosed-exceptions,
    enummapset,
    enumset,
    erf,
    event-list,
    exception-transformers,
    exceptions,
    explicit-exception,
    extensible-effects,
    extra,
    fail,
    fast-math,
    fclabels,
    fgl,
    fingertree,
    finite-typelits,
    first-class-families,
    fixed-length,
    fixed-list,
    flow,
    foldl,
    fmlist,
    force-layout,
    -- formattable, (time dependency is too old)
    -- foundation, (doesn't build for unclear reasons related to ghc-prim)
    free,
    fused-effects,
    generic-deriving,
    generic-lens,
    generics-sop,
    ghc-prim,
    ghcjs-base,
    ghcjs-dom,
    ghcjs-perch,
    ghcjs-prim,
    groups,
    half,
    -- hamilton, (depends on hmatrix, which uses native libs)
    hashable,
    hashtables,
    haskell-lexer,
    haskell-src-exts,
    haskell-src-meta,
    hedgehog,
    hspec,
    hspec-core,
    hspec-expectations,
    html,
    http-api-data,
    http-media,
    http-types,
    ieee754,
    indexed-list-literals,
    indexed-profunctors,
    integer-gmp,
    integer-logarithms,
    integration,
    interpolation,
    intervals,
    invariant,
    jsaddle,
    kan-extensions,
    keycode,
    latex,
    leancheck,
    lens,
    lifted-async,
    lifted-base,
    linear,
    log-domain,
    loop,
    markov-chain,
    massiv,
    math-functions,
    matrix,
    megaparsec,
    memory,
    mfsolve,
    microlens,
    microlens-mtl,
    miso,
    mmorph,
    monad-bayes,
    monad-control,
    monad-coroutine,
    monad-loops,
    monad-parallel,
    monad-unlift,
    mono-traversable,
    monoid-extras,
    monoid-transformer,
    monoidal-containers,
    mtl,
    mtl-compat,
    mutable-containers,
    mwc-probability,
    mwc-random,
    nats,
    natural-transformation,
    netwire,
    network-uri,
    newtype,
    newtype-generics,
    non-empty,
    non-negative,
    numeric-prelude,
    old-locale,
    optics,
    optics-core,
    optics-extra,
    optparse-applicative,
    parallel,
    parsec,
    parser-combinators,
    parsers,
    patch,
    pipes,
    polysemy,
    pqueue,
    prelude-compat,
    pretty,
    pretty-simple,
    pretty-show,
    prettyprinter,
    prim-uniq,
    primitive,
    probability,
    profunctors,
    protolude,
    psqueues,
    quickcheck-io,
    random,
    random-shuffle,
    reactive-banana,
    reducers,
    ref-tf,
    reflection,
    reflex,
    reflex-dom,
    reflex-dom-core,
    relude,
    resourcet,
    rio,
    safe,
    safe-exceptions,
    scheduler,
    scientific,
    semialign,
    semigroupoids,
    semigroups,
    servant,
    set-cover,
    simple-affine-space,
    singleton-bool,
    -- singletons, (build error related to Int/Integer/Uniq)
    sop-core,
    split,
    splitmix,
    statistics,
    stm,
    storable-complex,
    storable-record,
    streaming,
    string-conversions,
    svg-builder,
    syb,
    tagged,
    tasty,
    tasty-expected-failure,
    tasty-hedgehog,
    tasty-hunit,
    template-haskell,
    text,
    tf-random,
    tfp,
    these,
    time,
    time-compat,
    transformers,
    transformers-base,
    transformers-compat,
    -- transient, (build fails: missing Semigroup instance for TransIO)
    trifecta,
    type-equality,
    typelits-witnesses,
    unagi-chan,
    unbounded-delays,
    unexceptionalio,
    unicode,
    unique,
    unliftio,
    unliftio-core,
    unordered-containers,
    utf8-string,
    utility-ht,
    uuid-types,
    vault,
    vector,
    vector-algorithms,
    vector-binary-instances,
    vector-builder,
    vector-space,
    vinyl,
    void,
    witherable,
    wl-pprint-annotated,
    zenc

  Default-language:    Haskell2010
